tests/NormalTests/paczka1/fuzzy1/49357940.err
Error in line 7: S822 S822 85,8
Error in line 9: S822 A74 75,4
Error in line 15: fEyOqpoJS A74 97,3
Error in line 23: fEyOqpoJS A795 33,5
Error in line 24: fEyOqpoJS S868 45,2
Error in line 16: N6R8IF A795 17,6
